<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"

    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="match_parent"
            android:layout_height="300dp"

            android:src="@drawable/lap_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="36sp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/slogan_name"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/let_userLogIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/purple_700"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="Suspicious0dp" />

            <Button

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/purple_700"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                tools:ignore="OnClick,Suspicious0dp" />

        </LinearLayout>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="letTheUserLoggedIn"
            android:text="@string/how_we_work"
            android:textColor="@color/purple_700"
            tools:ignore="OnClick,Suspicious0dp" />

    </LinearLayout>
</ScrollView>