<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".Login">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"

        android:src="@drawable/back_button_icon" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        >

      <com.google.android.material.textfield.TextInputLayout

          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:hint="@string/enter_username"
          android:textColorHint="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"


          app:hintTextColor="@color/black"
          app:startIconDrawable="@drawable/username_icon"
          app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli"
            android:textColor="@color/black"
            android:inputType="text"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/login_password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:hint="@string/enter_password"
          android:textColorHint="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"
          app:endIconMode="password_toggle"
          app:endIconTint="@color/black"
          app:hintTextColor="@color/black"
          app:startIconDrawable="@drawable/password_icon"
          app:startIconTint="@color/black">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fontFamily="@font/muli"
          android:textColor="@color/black"
          android:inputType="textPassword"/>
      </com.google.android.material.textfield.TextInputLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/remember_me"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:buttonTint="@color/black"
            android:text="@string/remember_me"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:onClick="callForgetPassword"
            android:text="@string/forgot_password"
            tools:ignore="OnClick" />
      </RelativeLayout>

      <Button
          android:id="@+id/letTheUserLogIn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_marginTop="20dp"
          android:background="@color/black"
          android:onClick="letTheUserLoggedIn"
          android:text="@string/login"
          android:textColor="@color/white"
          tools:ignore="OnClick" />


      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/letTheUserLogIn"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:background="#00000000"
          android:onClick="callSignUpFromLogin"
          android:layout_gravity="center"
          android:text="Create Account"
          tools:ignore="OnClick" />



  </LinearLayout>

  </LinearLayout>
</ScrollView>