<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_3rd_screen_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    android:padding="30dp"
    android:transitionName="transition_OTP_screen"
    tools:context=".ui.auth.SignUp3rdClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_button_icon"
            android:transitionName="transition_back_arrow_btn" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle"
                android:fontFamily="@font/ds_digital_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="3/3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="transition_slide_text" />


            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">





                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phone_number_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/enter_phone"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"

                    app:startIconDrawable="@drawable/phone_number_icon"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_semibold"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>

                  <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_id_number_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_phone_number_layout"
                      android:layout_marginTop="20dp"
                    android:hint="@string/id_number"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/account_num"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_id_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_semibold"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/signup_id_number_layout"
                        android:layout_marginTop="20dp"
                        android:background="@color/black"
                        android:elevation="5dp"
                        android:onClick="submit"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:transitionName="transition_next_btn" />


                    </RelativeLayout>


                    <Button
                        android:id="@+id/signup_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="#00000000"
                        android:elevation="5dp"
                        android:fontFamily="@font/muli"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:transitionName="transition_login_btn" />


                    </LinearLayout>


                    </ScrollView>

